Se arreglaron los mapeos. Comienzo con la implementación de la funcinalidad del perfil

--- a/src/main/webapp/generales/menu-filtros.html
+++ b/src/main/webapp/generales/menu-filtros.html
@@ -2,6 +2,13 @@
 	<nav>
 		<ul>
 			<li>
+				<div class="opciones-menu-altura padding-menu">
+					<div class="texto-centro opciones-menu-altura izquierda">
+						<input type="text" id="input-buscar-filtrado" placeholder="Buscar" maxlength="100">
+					</div>
+				</div>
+			</li>
+			<li>
 				<div class="opciones-menu-altura padding-menu" onclick="switchEstado('idioma')">
 					<div class="texto-centro opciones-menu-altura izquierda">
 						<p>Idioma</p>
@@ -84,5 +91,5 @@
 			</li>
 		</ul>
 	</nav>
-	<input type="submit" class="vinculos boton-formulario centrar" value="Filtrar">
+	<input type="submit" class="vinculos boton-formulario centrar" value="Buscar">
 </form>
