Se agrega funcionalidad de estrellas y modificación al menú de filtrado y al perfil del usuario

--- a/src/main/webapp/generales/menu-filtros.html
+++ b/src/main/webapp/generales/menu-filtros.html
@@ -49,7 +49,27 @@
 				</div>
 				<ul>
 					<li class="subopcion-menu-margenes oculto" id="ranking">
-						<input type="range" name="rankUsuario" value="0" min="0" max="5">
+						<table>
+							<tbody>
+								<tr>
+									<td><span class="icon-star-empty estrella centrar"
+										id="estrellaRankingFiltro1"
+										onclick="styleStarts('estrellaRankingFiltro',1,'numeroEstrellasRankingFiltro');"></span></td>
+									<td><span class="icon-star-empty estrella centrar"
+										id="estrellaRankingFiltro2"
+										onclick="styleStarts('estrellaRankingFiltro',2,'numeroEstrellasRankingFiltro');"></span></td>
+									<td><span class="icon-star-empty estrella centrar"
+										id="estrellaRankingFiltro3"
+										onclick="styleStarts('estrellaRankingFiltro',3,'numeroEstrellasRankingFiltro');"></span></td>
+									<td><span class="icon-star-empty estrella centrar"
+										id="estrellaRankingFiltro4"
+										onclick="styleStarts('estrellaRankingFiltro',4,'numeroEstrellasRankingFiltro');"></span></td>
+									<td><span class="icon-star-empty estrella centrar"
+										id="estrellaRankingFiltro5"
+										onclick="styleStarts('estrellaRankingFiltro',5,'numeroEstrellasRankingFiltro');"></span></td>
+								</tr>
+							</tbody>
+						</table> <input type="hidden" id="numeroEstrellasRankingFiltro" name="estrellasRankingFiltro" value="0">
 					</li>
 				</ul>
 			</li>
@@ -85,7 +105,27 @@
 				</div>
 				<ul>
 					<li class="subopcion-menu-margenes oculto" id="popularidad">
-						<input type="range" name="popularidad" value="0" min="0" max="5">
+						<table>
+							<tbody>
+								<tr>
+									<td><span class="icon-star-empty estrella centrar"
+										id="popularidadEstrella1"
+										onclick="styleStarts('popularidadEstrella',1,'popularidad');"></span></td>
+									<td><span class="icon-star-empty estrella centrar"
+										id="popularidadEstrella2"
+										onclick="styleStarts('popularidadEstrella',2,'popularidad');"></span></td>
+									<td><span class="icon-star-empty estrella centrar"
+										id="popularidadEstrella3"
+										onclick="styleStarts('popularidadEstrella',3,'popularidad');"></span></td>
+									<td><span class="icon-star-empty estrella centrar"
+										id="popularidadEstrella4"
+										onclick="styleStarts('popularidadEstrella',4,'popularidad');"></span></td>
+									<td><span class="icon-star-empty estrella centrar"
+										id="popularidadEstrella5"
+										onclick="styleStarts('popularidadEstrella',5,'popularidad');"></span></td>
+								</tr>
+							</tbody>
+						</table> <input type="hidden" id="popularidad" name="popularidad" value="0">
 					</li>
 				</ul>
 			</li>
